--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "start": "node ./src/www.js",
-    "test": "NODE_ENV=test ts-node npx jasmine",
-    "test-reports": "NODE_ENV=test nyc --reporter=cobertura --reporter=html --reporter=text npm test",
+    "test": "ts-node ./node_modules/jasmine/bin/jasmine",
+    "test-reports": "nyc --reporter=cobertura --reporter=html --reporter=text npm test",
     "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
     "post-compile": "cp package*.json out",
     "test:watch": "nodemon --ext ts --exec \"npm test\""
